src/snapshots/rlox__parse__tests__rparens.snap
---
source: src/parse.rs
expression: "crate::util::mock_interpret(\"print 1);\\n\")"
---
stdout:


stderr:
Error: 
   ╭─[<unknown>:?:?]
   │
 1 │ print 1);
   │ ──┬──  ┬  
   │   ╰─────── This should be terminated with ;
   │        │  
   │        ╰── There should be a ; here
───╯


